<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Clock with Planisphere lite</string>
    <string name="locationSettings">Location Settings</string>
    <string name="license">License</string>
    <string name="opensource_licenses">OpenSource Licenses</string>
    <string name="latitude">"Latitude: "</string>
    <string name="latitudeHint" translatable="false">+23.4567</string>
    <string name="longitude">"Longitude: "</string>
    <string name="longitudeHint" translatable="false">+123.456</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="modify_location">Modify Location</string>
    <string name="inGettingLocation">in getting location…</string>
    <string name="pleaseCheckIfGPSIsOn">Please check if GPS is on.</string>
    <string name="app_license" translatable="false" tools:ignore="Typos">Copyright 2020-2026 Yasuhiro Yamakawa &lt;withlet11@gmail.com&gt;\n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy of this
        software and associated documentation files (the "Software"), to deal in the Software
        without restriction, including without limitation the rights to use, copy, modify, merge,
        publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
        to whom the Software is furnished to do so, subject to the following conditions:\n\n
        The above copyright notice and this permission notice shall be included in all copies or
        substantial portions of the Software.\n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
        FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
        OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
        DEALINGS IN THE SOFTWARE. </string>
    <string name="privacy_policy_header">Privacy Policy</string>
    <string name="privacy_policy">
        <i>Last updated on 20 Nov 2020</i>\n\n
        In order to clarify what we do on this matter and how the information provided by the
        users are used is described in this privacy policy.\n\n
        <b>User data collection</b>\n
        We do not collect any user information including: names, phone numbers, e-mail addresses
        and passwords. However, we use 3rd party ad service (Google AdMob™) in this app, and that
        service may collect your information. The privacy policy can be read on the following page:
            <a href="https://policies.google.com/privacy">Google privacy policy</a>\n\n
        <b>Additional permissions</b>\n
        This application accesses your geolocation information, only if you permit. That data
        is stored at your device only, and never provided to any other applications or services.\n
        Internet is used to display advertisement banners.\n\n
        <b>Changes</b>\n
        This Privacy Policy may be updated from time to time for any reason.\n\n
        <b>Your Consent</b>\n
        By using this app you consent to this Privacy Policy as well as all the 3rd party
        Privacy Policies mentioned above. If you disagree with this Privacy Policy or the 3rd party
        Privacy Policies you can uninstall this app.\n\n
        <b>Contact Us</b>\n
        If there are any questions regarding this Privacy Policy you may contact us by email:
        <a href="mailto:withlet11@gmail.com" tools:ignore="Typos">withlet11@gmail.com</a>
    </string>
    <string name="north_label" translatable="false">N</string>
    <string name="south_label" translatable="false">S</string>
    <string name="no_permission_to_access_location_permanent">No permission to access the location service. Please check the application permission in the system settings.</string>
    <string name="no_permission_to_access_location_once">No permission to access the location service.</string>
    <string name="clock_base_panel">Clock base panel</string>
    <string name="sky_panel">Sky panel</string>
    <string name="sun_and_moon_panel">Sun and Moon panel</string>
    <string name="horizon_panel">Horizon panel</string>
    <string name="clock_hands_panel">Clock hands panel</string>
    <string name="celestial_hemisphere">Celestial hemisphere</string>
    <string name="north_full_label">North</string>
    <string name="south_full_label">South</string>
    <string name="clock_hands_visibility">Clock hands visibility</string>
    <string name="clock_with_planisphere_lite_settings">Clock with Planisphere lite settings</string>
    <string name="attention"><b>Attention:</b>Please add an app widget of Clock with Planisphere lite to the home screen, if you have done it. Settings change may not occur immediately because the sky panel is refreshed not every second but every minute.</string>
    <string name="display_control">Display Control</string>
    <plurals name="clockhands_visibility_notice">
        <item quantity="one">Clock hands will appear/disappear %d second later</item>
        <item quantity="other">Clock hands will appear/disappear %d seconds later</item>
    </plurals>
    <plurals name="update_notice">
        <item quantity="one">App Widget will be updated %d second later</item>
        <item quantity="other">App Widget will be updated %d seconds later</item>
    </plurals>
</resources>