<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.withlet11.skyclock.LocationSettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/design_default_color_on_primary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/latitude"
                        android:textAlignment="textEnd" />

                    <EditText
                        android:id="@+id/latitudeField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="+23.4567"
                        android:ems="10"
                        android:hint="@string/latitudeHint"
                        android:inputType="numberSigned|number|numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="300dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/longitude"
                        android:textAlignment="textEnd" />

                    <EditText
                        android:id="@+id/longitudeField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="+123.456"
                        android:ems="10"
                        android:hint="@string/longitudeHint"
                        android:inputType="numberSigned|number|numberDecimal" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/getLocationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gps" />

        </LinearLayout>

        <Button
            android:id="@+id/applyLocationButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/modify" />

        <TextView
            android:id="@+id/statusField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>